--- a/dada/extras/documentation/pod_source/new_features.pod
+++ b/dada/extras/documentation/pod_source/new_features.pod
@@ -21,11 +21,11 @@ Pretty easy to set up, create the table located in dada/extras/SQL/dada_settings
 
 and set the, $SETTINGS_DB_TYPE to MySQL, or Postgres
 
-DB FIle to *SQL migration isn't too hard, see the script, dada_settings_dbtosql.pl in the dada/extras/scripts directory, 
+DB FIle to *SQL migration isn't too hard, see the script, dada_settings_db_to_sql.pl in the dada/extras/scripts directory, 
 
 Whose instructions are: 
 
-Name dada_settings_dbtosql.pl
+Name dada_settings_db_to_sql.pl
 Description
     Cute name, huh?
 
