This adds a new option to allow you to specify if you want the list owner to receive a copy of your mass mailing, as well as some usability problems with the mass mailing buttons - they'll be labeled different, depending on if you're sending a mass mailing or a list invitation, as well as changing the text if you're simply archiving (and not sending) a message.

--- a/dada/extras/documentation/pod_source/FAQ-general.pod
+++ b/dada/extras/documentation/pod_source/FAQ-general.pod
@@ -1372,7 +1372,7 @@ L<http://dadamailproject.com/support/documentation/FAQ-email_sending.pod.html>
 
 Yes! There are a few ways. 
 
-=head3 Archive but DO NOT send, method
+=head3 Only Archive, Don't Send, method
 
 =over
 
@@ -1384,7 +1384,7 @@ Yes! There are a few ways.
 
 =item 4 Check: B<Archive this message>
 
-=item 5 Check: B<Archive but DO NOT send>
+=item 5 Check: B<Only Archive, Don't Send>
 
 =item 6 Change: B<Back Date ( month/day/year - hour:minute:second )>
 
